Namespace misconfiguration update

--- a/views/Home/Install-BlogConfiguration.cshtml
+++ b/views/Home/Install-BlogConfiguration.cshtml
@@ -3,7 +3,7 @@
     Layout = "~/views/Shared/_Install.cshtml";
 }
 
-@model filth1.models.Blog
+@model filth.models.Blog
 
 @using (Html.BeginForm())
 {
