--- a/views/Home/Install-Ready.cshtml
+++ b/views/Home/Install-Ready.cshtml
@@ -3,7 +3,7 @@
     Layout = "~/views/Shared/_Install.cshtml";
 }
 
-@model filth1.models.User
+@model filth.models.User
 
 @using (Html.BeginForm("", "?install=4", FormMethod.Post, new { @id = "loginform", autocomplete = "odd" }))
 {
