--- a/views/Home/Install-ServerConfiguration.cshtml
+++ b/views/Home/Install-ServerConfiguration.cshtml
@@ -4,7 +4,7 @@
     
 }
 
-@model filth1.models.ServerConfiguration
+@model filth.models.ServerConfiguration
 
 @using (Html.BeginForm())
         {
