--- a/views/Home/Install-BlogConfiguration.cshtml
+++ b/views/Home/Install-BlogConfiguration.cshtml
@@ -32,7 +32,7 @@
 
             <div class="editor-label">
                 <br />
-                <input type="button" value="Create site" class="btn btn-default" id="submit-blog-configuration" />
+                <input type="button" value="Create site" class="btn btn-default" id="submit-blog-configuration" /><span id="wait"></span>
             </div>
         </fieldset>
         <div class="col-lg-6">
