--- a/views/Home/Install-AddUser.cshtml
+++ b/views/Home/Install-AddUser.cshtml
@@ -34,7 +34,7 @@
 
             <div class="editor-label">
                 <br />
-                <input type="button" value="Add yourself" class="btn btn-default" id="submit-user-configuration" />
+                <input type="button" value="Add yourself" class="btn btn-default" id="submit-user-configuration" /><span id="wait"></span>
             </div>
         </fieldset>
         <div class="col-lg-6">
