--- a/views/Home/Install-Ready.cshtml
+++ b/views/Home/Install-Ready.cshtml
@@ -35,7 +35,7 @@
 
             <div class="editor-label">
                 <br />
-                <input type="button" value="Login" class="btn btn-success" id="submit-user-login" />
+                <input type="button" value="Login" class="btn btn-success" id="submit-user-login" /><span id="wait"></span>
             </div>
         </fieldset>
         <div class="col-lg-6">
