--- a/views/Home/Install-ServerConfiguration.cshtml
+++ b/views/Home/Install-ServerConfiguration.cshtml
@@ -49,7 +49,7 @@
                  
                 <div class="editor-label">
                     <br />
-                    <input type="button" value="Create connection" class="btn btn-default" id="submit-server-configuration" />
+                    <input type="button" value="Create connection" class="btn btn-default" id="submit-server-configuration" /><span id="wait"></span>
                 </div>
             </fieldset> 
             <div class="col-lg-6">
