--- a/views/Home/Install-BlogConfiguration.cshtml
+++ b/views/Home/Install-BlogConfiguration.cshtml
@@ -23,11 +23,11 @@
             </div>
 
             <div class="editor-label">
-                @Html.LabelFor(model => model.BloggerName)
+                @Html.LabelFor(model => model.Name)
             </div>
             <div class="editor-field">
-                @Html.TextBoxFor(model => model.BloggerName, new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.BloggerName)
+                @Html.TextBoxFor(model => model.Name, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Name)
             </div>
 
             <div class="editor-label">
